Closed Bug 640993 Opened 13 years ago Closed 13 years ago

TI: Assertion failure: isFunction, at ../jsinfer.h:423

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

(Whiteboard: fixed-in-jaegermonkey)

--
function f() {
    return f;
}
f.__proto__ = null;
gc();
f();
new f();
--
Asserts with -n -a:
Assertion failure: isFunction, at ../jsinfer.h:423
'new' overhaul in bug 619433 assumed that JSFunctions have type objects which themselves are functions, which is not the case when mutable __proto__ is in play.

http://hg.mozilla.org/projects/jaegermonkey/rev/d8900f86b86e
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.