[INFER] Watch out computing 'new' value for functions given a non-function type via setting __proto__, bug 640993.