js/src/jit-test/tests/basic/bug640993.js
@@ -1,0 +1,7 @@
+function f() {
+    return f;
+}
+f.__proto__ = null;
+gc();
+f();
+new f();
